More server remoting stuff

--- a/Server/GTAServer.csproj
+++ b/Server/GTAServer.csproj
@@ -95,6 +95,8 @@
     <Compile Include="CallbackToManager.cs" />
     <Compile Include="ChatData.cs" />
     <Compile Include="GameServer.cs" />
+    <Compile Include="ServerRemoting\Remoting.cs" />
+    <Compile Include="ServerRemoting\RemotingPacket.cs" />
     <Compile Include="ServerScript.cs" />
     <Compile Include="NativeData.cs" />
     <Compile Include="Program.cs" />
