--- a/Server/GTAServer.csproj
+++ b/Server/GTAServer.csproj
@@ -93,19 +93,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CallbackToManager.cs" />
-    <Compile Include="ChatData.cs" />
-    <Compile Include="GameServer.cs" />
+    <Compile Include="PluginAPI\ChatEventArgs.cs" />
+    <Compile Include="PluginAPI\IncomingConnectionEventArgs.cs" />
+    <Compile Include="PluginAPI\PlayerConnectionEventArgs.cs" />
+    <Compile Include="PluginAPI\ConnectionRefusedEventArgs.cs" />
+    <Compile Include="PluginAPI\PlayerDisconnectEventArgs.cs" />
+    <Compile Include="PluginAPI\PlayerSpawnedEventArgs.cs" />
+    <Compile Include="ServerInstance\ChatData.cs" />
+    <Compile Include="ServerInstance\GameServer.cs" />
+    <Compile Include="ServerInstance\NativeData.cs" />
+    <Compile Include="ServerInstance\ServerScript.cs" />
+    <Compile Include="ServerInstance\ServerSettings.cs" />
+    <Compile Include="PluginAPI\IPlugin.cs" />
+    <Compile Include="PluginAPI\PluginAttribute.cs" />
+    <Compile Include="PluginAPI\PluginEventManager.cs" />
+    <Compile Include="ServerInstance\VehicleData.cs" />
     <Compile Include="ServerRemoting\IRemoteCommand.cs" />
     <Compile Include="ServerRemoting\Remoting.cs" />
     <Compile Include="ServerRemoting\RemotingPacket.cs" />
     <Compile Include="ServerRemoting\ServerStartCommand.cs" />
     <Compile Include="ServerRemoting\ServerStopCommand.cs" />
-    <Compile Include="ServerScript.cs" />
-    <Compile Include="NativeData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerSettings.cs" />
-    <Compile Include="VehicleData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
