--- a/Client/GTACoOp.csproj
+++ b/Client/GTACoOp.csproj
@@ -31,7 +31,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
-    <DocumentationFile>GTACoOp.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
     <FileAlignment>8192</FileAlignment>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
