--- a/Server/packages.config
+++ b/Server/packages.config
@@ -6,5 +6,6 @@
   <package id="MaxMind.GeoIP2" version="2.7.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net451" />
+  <package id="sqlite-net" version="1.0.8" targetFramework="net452" />
   <package id="System.Net.Http" version="4.1.0" targetFramework="net451" />
 </packages>
