Revert "some other stuff"
This reverts commit 6d5d1b0cfa45354eaeafec995db2fe248cd21c52.

--- a/Client/GTACoOp.csproj
+++ b/Client/GTACoOp.csproj
@@ -31,8 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
-    <DocumentationFile>
-    </DocumentationFile>
+    <DocumentationFile>GTACoOp.XML</DocumentationFile>
     <FileAlignment>8192</FileAlignment>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
