--- a/Server/packages.config
+++ b/Server/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BCrypt-Official" version="0.1.109" targetFramework="net452" />
   <package id="Lidgren.Network" version="1.0.2" targetFramework="net451" />
   <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="MaxMind.Db" version="2.1.2" targetFramework="net452" />
